# dmpy

./: .dmpy.env.example  .flake8  .gitignore  CLI.md  NRSJFKJ-VTPZTXXHZ-20230522-20230522.txt  R.md  README.md  _readme_dmpapp_.txt  dmpapp.py  dmpy.md  example.dmpy.env  ideafast_dmp.py  noxfile.py  pyproject.toml  requirements.txt  test.py
dmpy/: __init__.py  cli.py  client.py  connections.py  dmpy.py  utils.py
dmpy/core/: app_state.py  connection.py  data_cache.py  file_db.py  login_state.py  payloads.py  user_info.py  utils.py
dmpy/core/resources/: __init__.py  create_data_curation.graphql  create_field_curation.graphql  create_project.graphql  create_query.graphql  create_query_curation.graphql  delete_data_records.graphql  delete_field.graphql  get_data_records.graphql  get_pub_keys.graphql  get_query_by_id.graphql  get_study.graphql  get_study_fields.graphql  issue_token.graphql  register_pubkeys.graphql  token.graphql  upload.graphql  upload_data_in_array.graphql  whoami.graphql
dmpy/graphql/: create_field.graphql  data_records.graphql  deleteField.graphql  files.graphql  study_fields.graphql  upload.graphql  upload_data_in_array.graphql
ideafast_dmp/: cli.py  dmp_app.py  dmp_connection.py  dmp_credentials.py  dmp_data_cache.py  dmp_file_db.py  dmp_login_state.py  dmp_resources.py  dmp_user_info.py  dmp_utils.py  helpers.py  ideafast_dmp.py
ideafast_dmp/app_state_persistence/: app_state.py
ideafast_dmp/resources/: dmp_study_files_full.graphql  dmp_userinfo.graphql
ideafast_platform_access/: __init__.py  dmp_app.py  dmp_connection.py  dmp_data_cache.py  dmp_file_db.py  dmp_login_state.py  dmp_resources.py  dmp_user_info.py  dmp_utils.py
ideafast_platform_access/app_state_persistence/: __init__.py  app_state.py
ideafast_platform_access/app_state_persistence/tests/: test_state.py
ideafast_platform_access/resources/: dmp_login.graphql  dmp_study_files.graphql
tests/: conftest.py  test_client.py  test_state.py
tests/core/: test_state.py
tests/data/: token_response_error.json  upload_response_error.json
