[tool.poetry]
name = "ideafast-dmp"
version = "0.1.0"
description = "Python package to access the IDEA-FAST Data Management Portal (DMP)"
authors = ["Jay Rainey <jay.rainey@newcastle.ac.uk>", "Luc Cluitmans <luc.cluitmans@vtt.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]
[tool.poetry.scripts]
cli = "ideafast_dmp.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
