[tool.poetry]
name = "dmpy"
version = "0.1.0"
description = "Python package to access the IDEA-FAST Data Management Portal (DMP)"
authors = ["Jay Rainey <jay.rainey@newcastle.ac.uk>", "Luc Cluitmans <luc.cluitmans@vtt.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
pandas = "^1.1.4"
requests = "^2.24.0"
requests_toolbelt = "^0.9.1"

[tool.poetry.dev-dependencies]
nox = "^2020.8.22"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-aaa = "^0.11.0"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
pytest = "^6.1.2"

[tool.poetry.scripts]
cli = "dmpy.cli:main"
upload = "dmpy.client:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"